# Lumi.rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs  parsing.rs  peek.rs
src/kernel/: common.rs  linux.rs  mod.rs  windows.rs
src/shell/: config.rs  mod.rs  parsing.rs  repl.rs  segments.rs
src/shell/cli_args/: cd.yaml
