[package]
name = "lumi"
version = "0.1.0"
authors = [ "Tony J. Hudgins <js.pwns@gmail.com>" ]

[dependencies]
pest = "2.0.2"
clap = "2.32.0"
yansi = "0.5.0"
whoami = "0.2.4"
dirs = "1.0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = [ "wincon", "processenv", "winbase", "handleapi" ] }
